--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.1",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^12.2.0",
     "@vueuse/nuxt": "^12.2.0",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
